apps/authority/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: authority-gateway
  namespace: authority
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "authority.cb-interview.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authority
  namespace: authority
spec:
  hosts:
  - "authority.cb-interview.com"
  gateways:
  - istio-ingress/istio-ingress
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: authority.authority.svc.cluster.local
        port:
          number: 80
